# pomodoro-timer

./: .gitignore  App.tsx  Cargo.toml  README.md  app.json  babel.config.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
__mocks__/: GLReact.mocks.tsx  gl-react.js
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/pomodorotimer/: DetoxTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pomodorotimer/: MainActivity.java  MainApplication.java
android/gradle/wrapper/: gradle-wrapper.properties
app/assets/: pixel_loader.wasm
info/: README.md
ios/: Podfile
ios/PomodoroTimer/: Info.plist
ios/PomodoroTimer.xcodeproj/: project.pbxproj
src/: CountdownTimer.test.ts  CountdownTimer.ts  CountdownTimerInterface.ts  CountdownTimerUnit.test.ts  InitialTime.interface.ts  PomodoroStateChangeInterface.ts  PomodoroTimerScreenViewController.tsx  PomodoroTimerViewController.tsx  PomodoroTimerViewControllerUnit.test.tsx  PomodoroTimerViewModel.test.ts  PomodoroTimerViewModel.ts  PomodoroTimerViewModelUnit.test.ts  ProfileStoreInterface.ts  TimeFormats.ts  Timer.interface.ts  react-app-env.d.ts
src/pixel-loader/: lib.rs
src/ui/: CompletingCircle.tsx  GradientPlane.tsx  GradientPlaneUnit.test.tsx  Icon.tsx  RadialGradientBackdrop.tsx  RadialGradientBackdropUnit.test.tsx  StepsCarousel.tsx  StepsCarouselUnit.test.tsx  TimerButton.tsx  TimerClock.tsx
src/utils/: PixelTesting.tsx  TestingUtils.ts  WasmRunner.tsx  testUtils.ts
