[package]
name = "pixel-loader"
version = "0.0.1"

[lib]
path = "src/pixel-loader/lib.rs"
# crate-type = ["cdylib", "staticlib"]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2"
image = "0.23"
base64 = "0.13"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# math = '*'
# log = "0.4.6"
# log-panics = "2.0"

# [target.'cfg(target_os="android")'.dependencies]
# jni = { version = "0.16", default-features = false }
# android_logger = "0.8"

# [target.'cfg(target_os = "ios")'.dependencies]
# libc = "0.2"
# core-foundation = "0.6.2"

# [build-dependencies]
# env_logger = "0.6"
